fix: update ErrorPage styles to set height and hide overflow

--- a/src/components/ErrorPage/ErrorPage.module.scss
+++ b/src/components/ErrorPage/ErrorPage.module.scss
@@ -2,7 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Schoolbell&display=swap');
 
 .main {
-  overflow-y: none;
+  height: 100vh;
+  overflow: hidden;
 
   .errorPage {
     display: flex;
